--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^2.4.0",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.12.0",
     "emoji-picker-react": "^4.13.2",
